# BPMCounter

./: .cproject  .project  AppContainer.hpp  CMakeLists.txt  globals.hpp  installed_libs.txt  log.txt  main.cpp  makeall.sh
Analyze/: Analyzer.hpp  Analyzer1.hpp  AnalyzerContainer.cpp  AnalyzerContainer.hpp  AnalyzerController.hpp  AnalyzerParam.cpp  AnalyzerParam.hpp  BPMAnalyzer.hpp  DSP.hpp  IAnalyzer.hpp  Param.hpp  ParamList.hpp  Procedure1.hpp  StopWatch.hpp
Analyze/TestAnalyze/: CMakeLists.txt  FakeAnalyzerParam.hpp  TestAnalyzer.cpp  TestAnalyzerController.cpp  TestAveraging.cpp  TestDSP.cpp  TestMain.cpp  TestParam.cpp  TestProcedure.hpp
App/: AppContainer.cpp  AppContainer.hpp  Logger.cpp  Logger.hpp  ThreadWrapper.hpp
Async/: FCAsyncLauncher.hpp
Audio/: ALSACardConfiguration.hpp  ALSARecordingService.cpp  ALSARecordingService.hpp  AudioCardConfigurator.cpp  AudioController.cpp  AudioController.hpp  AudioRecorder.cpp  AudioRecorder.hpp  Buffer.hpp  IAudioRecorder.hpp  ICardConfigProcedure.hpp  ICardConfigurator.hpp  IRecordingService.hpp
Audio/TestAudio/: CMakeLists.txt  FakeCardConfigurator.cpp  FakeCardConfigurator.hpp  FakeRecordingService.cpp  FakeRecordingService.hpp  TestAudioRecorder.cpp  TestBuffer.cpp  TestMain.cpp
Audio/Wavfiles/: WavFileWriter.hpp
BPMDetector/: .project  CMakeLists.txt  globals.hpp  main.cpp  makeall
BPMDetector/Analyze/: AnalyzerController.hpp  Averaging.hpp  IAnalyzer.hpp  ParamList.cpp  ParamList.hpp  RMSAnalyzer.hpp
BPMDetector/Analyze/TestAnalyze/: CMakeLists.txt  FakeAnalyzerParam.hpp  TestAnalyzerController.cpp  TestAveraging.cpp  TestMain.cpp  TestParam.cpp  TestParamList.cpp
BPMDetector/App/: AppContainer.hpp  Logger.hpp  ThreadWrapper.hpp
BPMDetector/Audio/: ALSACardCallbackConfiguration.hpp  ALSACardConfigProcedure.cpp  ALSACardConfigProcedure.hpp  ALSACardConfiguration.hpp  ALSARecordingService.hpp  AudioCardConfigurator.hpp  AudioController.hpp  AudioRecorder.cpp  AudioRecorder.hpp  ICardCallbackConfiguration.hpp
BPMDetector/Audio/TestAudio/: CMakeLists.txt  FakeCardConfigProcedure.cpp  FakeCardConfigProcedure.hpp  FakeRecordingService.hpp  TestAudioCardConfigurator.cpp  TestAudioCardManager.cpp  TestWavFileWriter.cpp
BPMDetector/Gui/: FrequencySpectrum.hpp  LED.hpp  Log.hpp  MainWindow.hpp
BPMDetector/Plot/: Plotting.hpp
Gui/: FrequencySpectrum.cpp  LED.cpp  LED.hpp  Log.cpp  Log.hpp  MainWindow.cpp  MainWindow.hpp  Spectrograph.cpp  Spectrograph.hpp
Plot/: CMakeLists.txt  main.cpp
